test/fail_compilation/fail3150.d
// PERMUTE_ARGS: -de -dw

void main() {
    ulong u = cast(ulong)[1,2];
}
